# Pinocchio-Vault

./: Cargo.toml  README.md
src/: deposit.rs  instructions.rs  lib.rs  withdraw.rs
tests/: deposit.rs  deposit_and_withdraw.rs
