[package]
name = "blueshift_vault"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
pinocchio = "0.8.4"
pinocchio-system = "0.2.3"
solana-pubkey = { version = "2.2.1", features = ["curve25519"] }

[dev-dependencies]
litesvm = "0.6.1"
solana-instruction = "2.2.1"
solana-keypair = "2.2.1"
solana-message = "2.2.1"
solana-pubkey = "2.2.1"
solana-signer = "2.2.1"
solana-system-interface = "1.0.0"
solana-transaction = "2.2.1"
blueshift_vault = { path = "./" }
